--- a/app/src/main/res/layout/item_calendar_day.xml
+++ b/app/src/main/res/layout/item_calendar_day.xml
@@ -1,11 +1,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/dayContainer"
     android:orientation="vertical"
     android:gravity="center"
     android:padding="4dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@android:color/transparent">
 
-    <TextView
+        <TextView
         android:id="@+id/dayText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -14,11 +16,11 @@
         android:textColor="#000000"
         android:textStyle="bold" />
 
-    <TextView
+        <TextView
         android:id="@+id/walkTimeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="00:21"
+        android:text="00:00"
         android:textSize="12sp"
         android:textColor="#666666" />
 </LinearLayout>
