--- a/app/src/main/res/layout/activity_eye_cam.xml
+++ b/app/src/main/res/layout/activity_eye_cam.xml
@@ -29,10 +29,10 @@
         android:textColor="#000000"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:layout_marginTop="44dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="44dp"/>
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <!-- 부제목 -->
     <TextView
@@ -43,10 +43,10 @@
         android:textSize="22sp"
         android:textStyle="bold"
         android:textColor="#000000"
+        android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@id/titleText"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="24dp"/>
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <!-- 눈 토글 -->
     <LinearLayout
