--- a/app/src/main/res/layout/activity_skin_result.xml
+++ b/app/src/main/res/layout/activity_skin_result.xml
@@ -66,9 +66,9 @@
         android:minHeight="180dp"
         android:elevation="4dp">
 
-        <include
-            layout="@layout/item_eye_result_block"
-            android:id="@+id/summary_block" />
+<!--        <include-->
+<!--            layout="@layout/item_eye_result_block"-->
+<!--            android:id="@+id/summary_block" />-->
     </FrameLayout>
 
     <!-- 상태 색상 안내 -->
@@ -116,9 +116,9 @@
         android:padding="16dp"
         android:elevation="4dp">
 
-        <include
-            layout="@layout/item_eye_result_block"
-            android:id="@+id/result_item_1" />
+<!--        <include-->
+<!--            layout="@layout/item_eye_result_block"-->
+<!--            android:id="@+id/result_item_1" />-->
     </FrameLayout>
 
 </RelativeLayout>
