--- a/app/src/main/res/layout/activity_skin_loading.xml
+++ b/app/src/main/res/layout/activity_skin_loading.xml
@@ -7,16 +7,18 @@
     android:background="#FFFFFF">
 
     <!-- 🔙 뒤로 가기 버튼 -->
+
     <ImageView
         android:id="@+id/backButton"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:src="@drawable/ic_arrow_back"
+        android:layout_marginTop="60dp"
         android:contentDescription="뒤로 가기"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:src="@drawable/ic_arrow_back"
+        app:layout_constraintHorizontal_bias="0.216"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <!-- 상단 벡터 배경 -->
     <View
         android:id="@+id/vectorBg"
