--- a/app/src/main/res/layout/item_skin_history_card.xml
+++ b/app/src/main/res/layout/item_skin_history_card.xml
@@ -1,4 +1,4 @@
-<!-- res/layout/item_eye_history_card.xml -->
+<!-- res/layout/item_skin_history_card.xml -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -28,7 +28,7 @@
             android:id="@+id/historyTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="안구 종합 건강도 "
+            android:text="피부 종합 건강도 "
             android:textColor="#222222"
             android:textStyle="bold"
             android:textSize="16sp"/>
