--- a/app/src/main/res/drawable/ic_eye_placeholder.xml
+++ b/app/src/main/res/drawable/ic_eye_placeholder.xml
@@ -14,6 +14,6 @@
         android:pathData="M10,20 Q20,32 30,20 Q20,8 10,20Z"/>
     <!-- 눈동자(작은 원) -->
     <path
-        android:fillColor="#AAAAAA"
-        android:pathData="M20,20a4,4 0 1,0 0.00001,0"/>
+        android:fillColor="#888888"
+        android:pathData="M20,16a4,4 0 1,0 0.00001,0"/>
 </vector>
